--- a/FlightManager/ASPFlightManager/Views/Users/Delete.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Users/Delete.cshtml
@@ -6,64 +6,40 @@
 
 <h1>Delete</h1>
 
-@*<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Flight</h4>
+    <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.From)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.From)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.To)
+            @Html.DisplayNameFor(model => model.LastName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.To)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartureDate)
+            @Html.DisplayNameFor(model => model.SSN)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartureDate)
+            @Html.DisplayFor(model => model.SSN)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ArrivalDate)
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ArrivalDate)
+            @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PlaneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PlaneNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PilotName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PilotName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Capacity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Capacity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CapacityVIP)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CapacityVIP)
+            @Html.DisplayFor(model => model.Email)
         </dd>
     </dl>
     
@@ -72,4 +48,4 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>*@
+</div>
