--- a/FlightManager/ASPFlightManager/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FlightManager/ASPFlightManager/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-@if (!User.IsInRole("Admin"))
+@if (!this.User.IsInRole("Admin"))
 {
     <h1>You're not supposed to be here! :)</h1>
     throw new UnauthorizedAccessException("You're not supposed to be here! :)");
