--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -6,19 +6,12 @@
 @inject SignInManager<User> SignInManager 
 @inject UserManager<User> UserManager
 
-@if(SignInManager.IsSignedIn(User)) { 
-<h1>HIIIIIIIIIIIIIII</h1>
-}
-@if (this.User.IsInRole("Admin"))
-{
-<h1>hiiiiiiiiiiiiiiiiiii</h1>
-}
-
 @if(this.User.IsInRole("Admin")){
     <h1>From the moment i understood the weakness of my flesh it disgusted me</h1>
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    @*add a place to make reservations*@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
