--- a/FlightManager/ASPFlightManager/Views/Reservations/Details.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Details.cshtml
@@ -61,6 +61,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @if (this.User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
