--- a/FlightManager/ASPFlightManager/Views/Users/Create.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Users/Create.cshtml
@@ -45,8 +45,8 @@ else
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <label asp-for="PasswordHash" class="control-label"></label>
+                    <input asp-for="PasswordHash" class="form-control" />
                     <span asp-validation-for="PasswordHash" class="text-danger"></span>
                 </div>
                 <div class="form-group">
