--- a/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReservationViewModel
+﻿@model ASPFlightManager.Controllers.ReservationViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -11,52 +11,52 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <select asp-for="Reservation.FlightId" class="form-control">
+            <select asp-for="Reservation.Flight" class="form-control">
                 <option value="">Select a flight</option>
                 @foreach (var flight in Model.Flights)
                 {
-                    <option value="@flight.Id">@($"{flight.Id}")</option>
+                    <option value="@flight.Id">@($"{flight.Id}aaaaaa")</option>
                 }
             </select>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="Reservation.FirstName" class="control-label"></label>
+                <input asp-for="Reservation.FirstName" class="form-control" />
+                <span asp-validation-for="Reservation.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SecondName" class="control-label"></label>
-                <input asp-for="SecondName" class="form-control" />
-                <span asp-validation-for="SecondName" class="text-danger"></span>
+                <label asp-for="Reservation.SecondName" class="control-label"></label>
+                <input asp-for="Reservation.SecondName" class="form-control" />
+                <span asp-validation-for="Reservation.SecondName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="Reservation.LastName" class="control-label"></label>
+                <input asp-for="Reservation.LastName" class="form-control" />
+                <span asp-validation-for="Reservation.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Reservation.Email" class="control-label"></label>
+                <input asp-for="Reservation.Email" class="form-control" />
+                <span asp-validation-for="Reservation.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SSN" class="control-label"></label>
-                <input asp-for="SSN" class="form-control" />
-                <span asp-validation-for="SSN" class="text-danger"></span>
+                <label asp-for="Reservation.SSN" class="control-label"></label>
+                <input asp-for="Reservation.SSN" class="form-control" />
+                <span asp-validation-for="Reservation.SSN" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <label asp-for="Reservation.PhoneNumber" class="control-label"></label>
+                <input asp-for="Reservation.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Reservation.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nationality" class="control-label"></label>
-                <input asp-for="Nationality" class="form-control" />
-                <span asp-validation-for="Nationality" class="text-danger"></span>
+                <label asp-for="Reservation.Nationality" class="control-label"></label>
+                <input asp-for="Reservation.Nationality" class="form-control" />
+                <span asp-validation-for="Reservation.Nationality" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketType" class="control-label"></label>
-                <input asp-for="TicketType" class="form-control" />
-                <span asp-validation-for="TicketType" class="text-danger"></span>
+                <label asp-for="Reservation.TicketType" class="control-label"></label>
+                <input asp-for="Reservation.TicketType" class="form-control" />
+                <span asp-validation-for="Reservation.TicketType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
