fixing the button

--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -10,13 +10,17 @@
     <h2>From the moment i understood the weakness of my flesh it disgusted me</h2>
 }
 
+<body style="background-image:url(https://cdn.discordapp.com/attachments/599576927883231246/1226475830075592734/4k-plane-taking-off-pr0e0lwl3pshaszh.webp?ex=6624e7a0&is=661272a0&hm=0c6b9e66ef306194d8776bcad6d965b18a65ef0d3820751c425feea3519e7044&); background-repeat:no-repeat; background-position: center; background-repeat: no-repeat;">
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     @*add a place to make reservations*@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
-        <li class="nav-item"style="list-style-type:none;">
+        <li class="nav-item"style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px">
             <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Create">Make a Reservation!</a>
         </li>
     </button>
 </div>
+
+</body>
