--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
 @if (this.User.IsInRole("Admin"))
 {
     <div class="text-center">
-        <h3>Emloyee quote of the day :</h3>
+        <h3>Employee quote of the day :</h3>
+        <h3>From the moment i understood the weakness of my flesh it disgusted me...</h3>
     </div>
-    <h2>From the moment i understood the weakness of my flesh it disgusted me...</h2>
 
 }
 
