--- a/FlightManager/ASPFlightManager/Views/Shared/_Layout.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color:white">
         <div class="container">
             &copy; 2024 - SRR Airlines; Created by Denislava & Ivana  - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
