--- a/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Create.cshtml
@@ -11,13 +11,13 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <select asp-for="Reservation.Flight" class="form-control">
-                <option value="">Select a flight</option>
-                @foreach (var flight in Model.Flights)
-                {
-                    <option value="@flight.Id">@($"{flight.Id}aaaaaa")</option>
-                }
-            </select>
+            <div class="form-group">
+                <label asp-for="Reservation.Flight"></label>
+                <select asp-for="Reservation.Flight.Id" asp-items="@(new SelectList(Model.Flights, "Id", "Id"))" class="form-control">
+                    <option value="">Select a flight</option>
+                </select>
+                <span asp-validation-for="Reservation.Flight.Id" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Reservation.FirstName" class="control-label"></label>
                 <input asp-for="Reservation.FirstName" class="form-control" />
