--- a/FlightManager/ASPFlightManager/Views/Flights/Details.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Flights/Details.cshtml
@@ -66,6 +66,73 @@
         </dd>
     </dl>
 </div>
+
+<h2>Made Reservations</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                FirstName
+            </th>
+            <th>
+                SecondName
+            </th>
+            <th>
+                LastName
+            </th>
+            <th>
+                Email
+            </th>
+            <th>
+                SSN
+            </th>
+            <th>
+                PhoneNumber
+            </th>
+            <th>
+                Nationality
+            </th>
+            <th>
+                TicketType
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Reservations)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SecondName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SSN)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nationality)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TicketType)
+                </td>
+                
+            </tr>
+        }
+    </tbody>
+</table>
+
 <div>
     @if (this.User.IsInRole("Admin"))
     {
