--- a/FlightManager/ASPFlightManager/Views/Reservations/Details.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Details.cshtml
@@ -62,7 +62,7 @@
             @Html.DisplayNameFor(model => model.Flight)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Flight)
+            @Html.DisplayFor(model => model.Flight.Id)
         </dd>
     </dl>
 </div>
