--- a/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
@@ -36,9 +36,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.TicketType)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Flight)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -70,21 +67,18 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.TicketType)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Flight)
-                </td>
-                <td>
-                     @if (this.User.IsInRole("Admin"))
+                <td style="display: flex; gap: 0.5em; justify-content: center; align-items: center; ">
+                    @if (this.User.IsInRole("Admin"))
                     {
                         <li style="list-style-type:none">
-                            <a asp-action="Edit" asp-route-id="@item.Id" 
+                            <a asp-action="Edit" asp-route-id="@item.Id"
                                style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Edit</a>
-                            <a asp-action="Delete" asp-route-id="@item.Id" 
+                            <a asp-action="Delete" asp-route-id="@item.Id"
                                style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 5px; color: black">Delete</a>
                         </li>
                     }
-                    <a asp-action="Details" asp-route-id="@item.Id" 
-                       style="list-style-type:none; border:solid; border-color: black; border-width:1px;border-radius:4px;padding:5px; color:black">Details</a>
+                    <a asp-action="Details" asp-route-id="@item.Id"
+                       style="list-style-type: none; border: solid; border-color: black; border-width: 1px; border-radius: 4px; padding: 4.2px; color: black">Details</a>
 
                 </td>
             </tr>
