--- a/FlightManager/ASPFlightManager/Views/Flights/Details.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Flights/Details.cshtml
@@ -33,7 +33,7 @@
             @*@Html.DisplayNameFor(model => model.ArrivalDate)*@
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ArrivalDate - model.DepartureDate)
+            @Html.DisplayFor(model => model.FlightDuration)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
