--- a/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/Index.cshtml
@@ -85,3 +85,9 @@
         }
     </tbody>
 </table>
+
+
+@*<paging page-no="Model.PageNo"
+        page-size="Model.PageSize"
+        total-records="Model.TotalRecords">
+</paging>*@
