--- a/FlightManager/ASPFlightManager/Views/_ViewImports.cshtml
+++ b/FlightManager/ASPFlightManager/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ASPFlightManager
 @using ASPFlightManager.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, LazZiya.TagHelpers
