--- a/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 {
     <div class="text-center" , style="display:flex; width:100%; justify-content:center; flex-direction:column">
         <h3>Employee quote of the day :</h3>
-        <img src="~/css/TheFleshGif.gif" alt="Alternate Text" style="height:9em; width:73em" />
+        <img src="https://cdn.discordapp.com/attachments/599576927883231246/1228989133377241118/TheFleshGif.gif?ex=662e0c52&is=661b9752&hm=f63a8a4a15d3a4481d0a6e00db840d8a2e68663a730c1dbc18852f6e225a8458&" alt="Alternate Text" style="height:9em; width:73em" />
     </div>
 
 }
