--- a/FlightManager/ASPFlightManager/Views/Reservations/EmailConfirmation.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Reservations/EmailConfirmation.cshtml
@@ -36,7 +36,7 @@
     <p>
         Your Nationality is @ViewData["Nationality"].
     </p>
-    <img src="~/css/rainbowLetters.png" alt="Alternate Text" />
+    <img src="https://cdn.discordapp.com/attachments/599576927883231246/1228989639243595826/rainbowLetters.png?ex=662e0ccb&is=661b97cb&hm=3b3f7e947a208886f5fdd8faac7056cf49fc0f4993beef0a85480ef8046c3958&" alt="Alternate Text" />
     <br />
 
 </h2>
