--- a/FlightManager/ASPFlightManager/Views/Users/Index.cshtml
+++ b/FlightManager/ASPFlightManager/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<img src="~/css/UsersGif.gif" alt="Alternate Text" />
+<img src="https://cdn.discordapp.com/attachments/599576927883231246/1228989434867744859/UsersGif.gif?ex=662e0c9a&is=661b979a&hm=e68ed3a8f5b4aafa3c8340576b3dab715cae473de57acd42d4e4557a823efab0&" alt="Alternate Text" />
 
 @if (!this.User.IsInRole("Admin"))
 {
